Fix spacing issue under parallax section, but this solution could be altered

--- a/src/index.css
+++ b/src/index.css
@@ -279,10 +279,6 @@ a {
     position: relative;
 }
 
-#fixed {
-    margin-top: 100vh;
-}
-
 .hero-fixed {
     width: 100%;
     height: 100vh;
